2009-12-09  Jaroslav Hajek  <highegg@gmail.com>

	* oct-shlib.h (octave_shlib): Rewrite.
	* oct-shlib.cc (octave_shlib): Rewrite.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* oct-time.cc (octave_base_tm::strftime): Call nstrftime instead
	of my_strftime.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* oct-time.cc: Include strftime.h.  Don't provide decl for strftime.
	(octave_base_tm::strftime): Call my_strftime instead of ::strftime.
	* Makefile.am (AM_CPPFLAGS): Add -I$(top_srcdir)/libgnu to the list.
	(LINK_DEPS): Add ../libgnu/libgnu.la to the list.
	(LIBOCTAVE_C_SOURCES): Remove strftime.c from the list.
	* strftime.c: Delete.

2009-12-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-d.cc (Array<double>::is_sorted): Declare as OCTAVE_API.
	* Array-f.cc (Array<float>::is_sorted): Ditto.
	* lo-sysdep.cc: Undef min and max after including windows.h

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* Array-d.cc (Array<double>::is_sorted): Optimized specialization.
	* Array-f.cc (Array<float>::is_sorted): Ditto.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.cc (lookup_binary): Remove.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T&, comp)): Move
	code here.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T*,
	octave_idx_type, octave_idx_type *, comp)): Remove offset parameter.
	Use a simple sequence of lookups.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T*,
	octave_idx_type, octave_idx_type *)): Update.
	(octave_sort<T>::lookupm, octave_sort<T>::lookupb): Remove.
	(octave_sort<T>::lookup_sorted): New overloaded method.

	* Array.cc (Array<T>::lookup (const Array<T>&, sortmode)): Remove
	linf & rinf params. Rewrite using is_sorted to check for sortedness,
	call octave_sort::lookup_sorted to do the sorted merge.
	(Array<T>::lookupm, Array<T>::lookupb): Remove.
	(NO_INSTANTIATE_ARRAY_SORT): Update.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>
